@@ -7,7 +7,6 @@
  */
 package org.elasticsearch.versioning;
 
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ExceptionsHelper;
 import org.elasticsearch.action.index.IndexRequest;
 import org.elasticsearch.action.index.IndexResponse;
@@ -50,9 +49,9 @@ import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static org.elasticsearch.core.Strings.format;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
@@ -138,14 +137,14 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
         List<Partition> partitions = IntStream.range(0, numberOfKeys)
             .mapToObj(i -> client().prepareIndex("test").setId("ID:" + i).setSource("value", -1).get())
             .map(response -> new Partition(response.getId(), new Version(response.getPrimaryTerm(), response.getSeqNo())))
-            .collect(Collectors.toList());
+            .toList();
 
         int threadCount = randomIntBetween(3, 20);
         CyclicBarrier roundBarrier = new CyclicBarrier(threadCount + 1); // +1 for main thread.
 
         List<CASUpdateThread> threads = IntStream.range(0, threadCount)
             .mapToObj(i -> new CASUpdateThread(i, roundBarrier, partitions, disruptTimeSeconds + 1))
-            .collect(Collectors.toList());
+            .toList();
 
         logger.info("--> Starting {} threads", threadCount);
         threads.forEach(Thread::start);
@@ -263,10 +262,8 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
                             if (version.compareTo(partition.latestSuccessfulVersion()) <= 0) {
                                 historyResponse.accept(new FailureHistoryOutput());
                             }
-                            logger.info(
-                                new ParameterizedMessage("Received failure for request [{}], version [{}]", indexRequest, version),
-                                e
-                            );
+                            Version versionToLog = version;
+                            logger.info(() -> format("Received failure for request [%s], version [%s]", indexRequest, versionToLog), e);
                             if (stop) {
                                 // interrupt often comes as a RuntimeException so check to stop here too.
                                 return;
