@@ -17,6 +17,8 @@ import org.elasticsearch.index.shard.ShardId;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -44,27 +46,15 @@ public class RoutingNode implements Iterable<ShardRouting> {
 
     private final LinkedHashSet<ShardRouting> relocatingShards;
 
-    private final Map<Index, LinkedHashSet<ShardRouting>> shardsByIndex;
+    private final Map<Index, Set<ShardRouting>> shardsByIndex;
 
-    public RoutingNode(String nodeId, DiscoveryNode node, ShardRouting... shards) {
-        this(nodeId, node, buildShardRoutingMap(shards));
-    }
-
-    RoutingNode(String nodeId, @Nullable DiscoveryNode node, LinkedHashMap<ShardId, ShardRouting> shards) {
+    RoutingNode(String nodeId, @Nullable DiscoveryNode node) {
         this.nodeId = nodeId;
         this.node = node;
-        this.shards = shards;
+        this.shards = new LinkedHashMap<>();
         this.relocatingShards = new LinkedHashSet<>();
         this.initializingShards = new LinkedHashSet<>();
-        this.shardsByIndex = new LinkedHashMap<>();
-        for (ShardRouting shardRouting : shards.values()) {
-            if (shardRouting.initializing()) {
-                initializingShards.add(shardRouting);
-            } else if (shardRouting.relocating()) {
-                relocatingShards.add(shardRouting);
-            }
-            shardsByIndex.computeIfAbsent(shardRouting.index(), k -> new LinkedHashSet<>()).add(shardRouting);
-        }
+        this.shardsByIndex = new HashMap<>();
         assert invariant();
     }
 
@@ -74,28 +64,15 @@ public class RoutingNode implements Iterable<ShardRouting> {
         this.shards = new LinkedHashMap<>(original.shards);
         this.relocatingShards = new LinkedHashSet<>(original.relocatingShards);
         this.initializingShards = new LinkedHashSet<>(original.initializingShards);
-        this.shardsByIndex = Maps.newLinkedHashMapWithExpectedSize(original.shardsByIndex.size());
-        for (Map.Entry<Index, LinkedHashSet<ShardRouting>> entry : original.shardsByIndex.entrySet()) {
-            shardsByIndex.put(entry.getKey(), new LinkedHashSet<>(entry.getValue()));
+        this.shardsByIndex = Maps.newMapWithExpectedSize(original.shardsByIndex.size());
+        for (Map.Entry<Index, Set<ShardRouting>> entry : original.shardsByIndex.entrySet()) {
+            shardsByIndex.put(entry.getKey(), new HashSet<>(entry.getValue()));
         }
         assert invariant();
     }
 
     RoutingNode copy() {
         return new RoutingNode(this);
-    }
-
-    private static LinkedHashMap<ShardId, ShardRouting> buildShardRoutingMap(ShardRouting... shardRoutings) {
-        final LinkedHashMap<ShardId, ShardRouting> shards = new LinkedHashMap<>();
-        for (ShardRouting shardRouting : shardRoutings) {
-            ShardRouting previousValue = shards.put(shardRouting.shardId(), shardRouting);
-            if (previousValue != null) {
-                throw new IllegalArgumentException(
-                    "Cannot have two different shards with same shard id " + shardRouting.shardId() + " on same node "
-                );
-            }
-        }
-        return shards;
     }
 
     @Override
@@ -136,8 +113,9 @@ public class RoutingNode implements Iterable<ShardRouting> {
      */
     void add(ShardRouting shard) {
         assert invariant();
-        if (shards.containsKey(shard.shardId())) {
-            throw new IllegalStateException(
+        final ShardRouting existing = shards.putIfAbsent(shard.shardId(), shard);
+        if (existing != null) {
+            final IllegalStateException e = new IllegalStateException(
                 "Trying to add a shard "
                     + shard.shardId()
                     + " to a node ["
@@ -148,15 +126,16 @@ public class RoutingNode implements Iterable<ShardRouting> {
                     + shard
                     + "]"
             );
+            assert false : e;
+            throw e;
         }
-        shards.put(shard.shardId(), shard);
 
         if (shard.initializing()) {
             initializingShards.add(shard);
         } else if (shard.relocating()) {
             relocatingShards.add(shard);
         }
-        shardsByIndex.computeIfAbsent(shard.index(), k -> new LinkedHashSet<>()).add(shard);
+        shardsByIndex.computeIfAbsent(shard.index(), k -> new HashSet<>()).add(shard);
         assert invariant();
     }
 
@@ -177,16 +156,14 @@ public class RoutingNode implements Iterable<ShardRouting> {
             boolean exist = relocatingShards.remove(oldShard);
             assert exist : "expected shard " + oldShard + " to exist in relocatingShards";
         }
-        shardsByIndex.get(oldShard.index()).remove(oldShard);
-        if (shardsByIndex.get(oldShard.index()).isEmpty()) {
-            shardsByIndex.remove(oldShard.index());
-        }
+        final Set<ShardRouting> byIndex = shardsByIndex.get(oldShard.index());
+        byIndex.remove(oldShard);
+        byIndex.add(newShard);
         if (newShard.initializing()) {
             initializingShards.add(newShard);
         } else if (newShard.relocating()) {
             relocatingShards.add(newShard);
         }
-        shardsByIndex.computeIfAbsent(newShard.index(), k -> new LinkedHashSet<>()).add(newShard);
         assert invariant();
     }
 
@@ -201,8 +178,9 @@ public class RoutingNode implements Iterable<ShardRouting> {
             boolean exist = relocatingShards.remove(shard);
             assert exist : "expected shard " + shard + " to exist in relocatingShards";
         }
-        shardsByIndex.get(shard.index()).remove(shard);
-        if (shardsByIndex.get(shard.index()).isEmpty()) {
+        final Set<ShardRouting> byIndex = shardsByIndex.get(shard.index());
+        byIndex.remove(shard);
+        if (byIndex.isEmpty()) {
             shardsByIndex.remove(shard.index());
         }
         assert invariant();
@@ -235,27 +213,32 @@ public class RoutingNode implements Iterable<ShardRouting> {
 
     /**
      * Determine the shards with a specific state
-     * @param states set of states which should be listed
+     * @param state state which should be listed
      * @return List of shards
      */
-    public List<ShardRouting> shardsWithState(ShardRoutingState... states) {
-        if (states.length == 1) {
-            if (states[0] == ShardRoutingState.INITIALIZING) {
-                return new ArrayList<>(initializingShards);
-            } else if (states[0] == ShardRoutingState.RELOCATING) {
-                return new ArrayList<>(relocatingShards);
-            }
+    public List<ShardRouting> shardsWithState(ShardRoutingState state) {
+        if (state == ShardRoutingState.INITIALIZING) {
+            return new ArrayList<>(initializingShards);
+        } else if (state == ShardRoutingState.RELOCATING) {
+            return new ArrayList<>(relocatingShards);
         }
-
         List<ShardRouting> shards = new ArrayList<>();
         for (ShardRouting shardEntry : this) {
-            for (ShardRoutingState state : states) {
-                if (shardEntry.state() == state) {
-                    shards.add(shardEntry);
-                }
+            if (shardEntry.state() == state) {
+                shards.add(shardEntry);
             }
         }
         return shards;
+    }
+
+    private static final ShardRouting[] EMPTY_SHARD_ROUTING_ARRAY = new ShardRouting[0];
+
+    public ShardRouting[] initializing() {
+        return initializingShards.toArray(EMPTY_SHARD_ROUTING_ARRAY);
+    }
+
+    public ShardRouting[] relocating() {
+        return relocatingShards.toArray(EMPTY_SHARD_ROUTING_ARRAY);
     }
 
     /**
@@ -308,7 +291,7 @@ public class RoutingNode implements Iterable<ShardRouting> {
     }
 
     public int numberOfOwningShardsForIndex(final Index index) {
-        final LinkedHashSet<ShardRouting> shardRoutings = shardsByIndex.get(index);
+        final Set<ShardRouting> shardRoutings = shardsByIndex.get(index);
         if (shardRoutings == null) {
             return 0;
         } else {
@@ -355,18 +338,12 @@ public class RoutingNode implements Iterable<ShardRouting> {
 
     private boolean invariant() {
         // initializingShards must consistent with that in shards
-        Collection<ShardRouting> shardRoutingsInitializing = shards.values()
-            .stream()
-            .filter(ShardRouting::initializing)
-            .collect(Collectors.toList());
+        Collection<ShardRouting> shardRoutingsInitializing = shards.values().stream().filter(ShardRouting::initializing).toList();
         assert initializingShards.size() == shardRoutingsInitializing.size();
         assert initializingShards.containsAll(shardRoutingsInitializing);
 
         // relocatingShards must consistent with that in shards
-        Collection<ShardRouting> shardRoutingsRelocating = shards.values()
-            .stream()
-            .filter(ShardRouting::relocating)
-            .collect(Collectors.toList());
+        Collection<ShardRouting> shardRoutingsRelocating = shards.values().stream().filter(ShardRouting::relocating).toList();
         assert relocatingShards.size() == shardRoutingsRelocating.size();
         assert relocatingShards.containsAll(shardRoutingsRelocating);
 
