@@ -27,6 +27,7 @@ import org.elasticsearch.lucene.search.uhighlight.BoundedBreakIteratorScanner;
 import org.elasticsearch.lucene.search.uhighlight.CustomPassageFormatter;
 import org.elasticsearch.lucene.search.uhighlight.CustomUnifiedHighlighter;
 import org.elasticsearch.lucene.search.uhighlight.Snippet;
+import org.elasticsearch.search.fetch.FetchContext;
 import org.elasticsearch.search.fetch.FetchSubPhase;
 import org.elasticsearch.search.fetch.FetchSubPhase.HitContext;
 
@@ -38,7 +39,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.lucene.search.uhighlight.CustomUnifiedHighlighter.MULTIVAL_SEP_CHAR;
 
@@ -117,7 +117,7 @@ public class UnifiedHighlighter implements Highlighter {
         );
         PassageFormatter passageFormatter = getPassageFormatter(fieldContext.hitContext, fieldContext.field, encoder);
         IndexSearcher searcher = fieldContext.context.searcher();
-        OffsetSource offsetSource = getOffsetSource(fieldContext.fieldType);
+        OffsetSource offsetSource = getOffsetSource(fieldContext.context, fieldContext.fieldType);
         BreakIterator breakIterator;
         int higlighterNumberOfFragments;
         if (numberOfFragments == 0
@@ -172,12 +172,13 @@ public class UnifiedHighlighter implements Highlighter {
         FetchSubPhase.HitContext hitContext,
         boolean forceSource
     ) throws IOException {
-        List<Object> fieldValues = HighlightUtils.loadFieldValues(fieldType, searchContext, hitContext, forceSource);
-        fieldValues = fieldValues.stream().map((s) -> convertFieldValue(fieldType, s)).collect(Collectors.toList());
-        return fieldValues;
+        return HighlightUtils.loadFieldValues(fieldType, searchContext, hitContext, forceSource)
+            .stream()
+            .<Object>map((s) -> convertFieldValue(fieldType, s))
+            .toList();
     }
 
-    protected BreakIterator getBreakIterator(SearchHighlightContext.Field field) {
+    protected static BreakIterator getBreakIterator(SearchHighlightContext.Field field) {
         final SearchHighlightContext.FieldOptions fieldOptions = field.fieldOptions();
         final Locale locale = fieldOptions.boundaryScannerLocale() != null ? fieldOptions.boundaryScannerLocale() : Locale.ROOT;
         final HighlightBuilder.BoundaryScannerType type = fieldOptions.boundaryScannerType() != null
@@ -213,7 +214,10 @@ public class UnifiedHighlighter implements Highlighter {
         return rawValue.substring(0, Math.min(rawValue.length(), Integer.MAX_VALUE - 1));
     }
 
-    protected OffsetSource getOffsetSource(MappedFieldType fieldType) {
+    protected static OffsetSource getOffsetSource(FetchContext fetchContext, MappedFieldType fieldType) {
+        if (fetchContext.sourceLoader().reordersFieldValues()) {
+            return OffsetSource.ANALYSIS;
+        }
         TextSearchInfo tsi = fieldType.getTextSearchInfo();
         if (tsi.hasOffsets()) {
             return tsi.termVectors() != TextSearchInfo.TermVector.NONE ? OffsetSource.POSTINGS_WITH_TERM_VECTORS : OffsetSource.POSTINGS;
@@ -224,7 +228,7 @@ public class UnifiedHighlighter implements Highlighter {
         return OffsetSource.ANALYSIS;
     }
 
-    private Predicate<String> fieldMatcher(FieldHighlightContext fieldContext) {
+    private static Predicate<String> fieldMatcher(FieldHighlightContext fieldContext) {
         if (fieldContext.field.fieldOptions().requireFieldMatch()) {
             String fieldName = fieldContext.fieldName;
             return fieldName::equals;
