@@ -95,7 +95,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.singleton;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.state;
@@ -592,7 +591,10 @@ public class TransportReplicationActionTests extends ESTestCase {
         setState(
             clusterService,
             clusterStateChanges.closeIndices(
-                clusterStateChanges.createIndex(clusterService.state(), new CreateIndexRequest(index)),
+                clusterStateChanges.createIndex(
+                    clusterService.state(),
+                    new CreateIndexRequest(index).waitForActiveShards(ActiveShardCount.NONE)
+                ),
                 new CloseIndexRequest(index)
             )
         );
@@ -863,9 +865,7 @@ public class TransportReplicationActionTests extends ESTestCase {
         assertListenerThrows("non existent node should throw a NoNodeAvailableException", listener, NoNodeAvailableException.class);
 
         final IndexShardRoutingTable shardRoutings = state.routingTable().shardRoutingTable(shardId);
-        final ShardRouting replica = randomFrom(
-            shardRoutings.replicaShards().stream().filter(ShardRouting::assignedToNode).collect(Collectors.toList())
-        );
+        final ShardRouting replica = randomFrom(shardRoutings.replicaShards().stream().filter(ShardRouting::assignedToNode).toList());
         listener = new PlainActionFuture<>();
         proxy.performOn(replica, new Request(NO_SHARD_ID), primaryTerm, randomNonNegativeLong(), randomNonNegativeLong(), listener);
         assertFalse(listener.isDone());
@@ -1130,7 +1130,7 @@ public class TransportReplicationActionTests extends ESTestCase {
         } catch (ExecutionException execException) {
             Throwable throwable = execException.getCause();
             logger.debug("got exception:", throwable);
-            assertTrue(throwable.getClass() + " is not a retry exception", action.retryPrimaryException(throwable));
+            assertTrue(throwable.getClass() + " is not a retry exception", TransportReplicationAction.retryPrimaryException(throwable));
             if (wrongAllocationId) {
                 assertThat(
                     throwable.getMessage(),
@@ -1181,7 +1181,7 @@ public class TransportReplicationActionTests extends ESTestCase {
             fail("using a wrong aid didn't fail the operation");
         } catch (ExecutionException execException) {
             Throwable throwable = execException.getCause();
-            if (action.retryPrimaryException(throwable) == false) {
+            if (TransportReplicationAction.retryPrimaryException(throwable) == false) {
                 throw new AssertionError("thrown exception is not retriable", throwable);
             }
             assertThat(throwable.getMessage(), containsString("_not_a_valid_aid_"));
@@ -1362,7 +1362,9 @@ public class TransportReplicationActionTests extends ESTestCase {
             shardStateAction,
             threadPool
         );
-        assertFalse(action.isRetryableClusterBlockException(randomRetryPrimaryException(new ShardId("index", "_na_", 0))));
+        assertFalse(
+            TransportReplicationAction.isRetryableClusterBlockException(randomRetryPrimaryException(new ShardId("index", "_na_", 0)))
+        );
 
         final boolean retryable = randomBoolean();
         ClusterBlock randomBlock = new ClusterBlock(
@@ -1374,7 +1376,10 @@ public class TransportReplicationActionTests extends ESTestCase {
             randomFrom(RestStatus.values()),
             EnumSet.of(randomFrom(ClusterBlockLevel.values()))
         );
-        assertEquals(retryable, action.isRetryableClusterBlockException(new ClusterBlockException(singleton(randomBlock))));
+        assertEquals(
+            retryable,
+            TransportReplicationAction.isRetryableClusterBlockException(new ClusterBlockException(singleton(randomBlock)))
+        );
     }
 
     private void assertConcreteShardRequest(TransportRequest capturedRequest, Request expectedRequest, AllocationId expectedAllocationId) {
