@@ -16,15 +16,12 @@ import org.elasticsearch.action.support.master.AcknowledgedResponse;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.MetadataIndexTemplateService.PutRequest;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.compress.CompressedXContent;
 import org.elasticsearch.common.settings.IndexScopedSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.TimeValue;
-import org.elasticsearch.core.Tuple;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.index.Index;
-import org.elasticsearch.index.IndexMode;
 import org.elasticsearch.index.IndexSettingProviders;
 import org.elasticsearch.index.mapper.MapperParsingException;
 import org.elasticsearch.index.mapper.MapperService;
@@ -39,8 +36,6 @@ import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xcontent.XContentParseException;
 
 import java.io.IOException;
-import java.time.Instant;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -53,7 +48,6 @@ import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonList;
 import static org.elasticsearch.cluster.metadata.MetadataIndexTemplateService.DEFAULT_TIMESTAMP_FIELD;
@@ -246,7 +240,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
 
         final Metadata metadata = client().admin().cluster().prepareState().get().getState().metadata();
         IndexTemplateMetadata template = metadata.templates().get(templateName);
-        ImmutableOpenMap<String, AliasMetadata> aliasMap = template.getAliases();
+        Map<String, AliasMetadata> aliasMap = template.getAliases();
         assertThat(aliasMap.size(), equalTo(1));
         AliasMetadata metaAlias = aliasMap.get(aliasName);
         String filterString = metaAlias.filter() == null ? null : metaAlias.filter().string();
@@ -267,14 +261,14 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "foo-1234", randomBoolean())
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             contains("foo-2", "foo-1")
         );
         assertThat(
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "bar-xyz", randomBoolean())
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             contains("bar")
         );
         assertThat(MetadataIndexTemplateService.findV1Templates(state.metadata(), "baz", randomBoolean()), empty());
@@ -299,14 +293,14 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "foo-1234", true)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             containsInAnyOrder("foo-2", "foo-1")
         );
         assertThat(
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "bar-xyz", true)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             contains("bar")
         );
         assertThat(MetadataIndexTemplateService.findV1Templates(state.metadata(), "baz", true), empty());
@@ -314,7 +308,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "sneaky1", true)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             contains("sneaky-hidden")
         );
 
@@ -323,28 +317,25 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "foo-1234", false)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             containsInAnyOrder("foo-2", "foo-1", "global")
         );
         assertThat(
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "bar-xyz", false)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             containsInAnyOrder("bar", "global")
         );
         assertThat(
-            MetadataIndexTemplateService.findV1Templates(state.metadata(), "baz", false)
-                .stream()
-                .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+            MetadataIndexTemplateService.findV1Templates(state.metadata(), "baz", false).stream().map(IndexTemplateMetadata::name).toList(),
             contains("global")
         );
         assertThat(
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "sneaky1", false)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             containsInAnyOrder("global", "sneaky-hidden")
         );
 
@@ -353,28 +344,25 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "foo-1234", null)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             containsInAnyOrder("foo-2", "foo-1", "global")
         );
         assertThat(
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "bar-xyz", null)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             containsInAnyOrder("bar", "global")
         );
         assertThat(
-            MetadataIndexTemplateService.findV1Templates(state.metadata(), "baz", null)
-                .stream()
-                .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+            MetadataIndexTemplateService.findV1Templates(state.metadata(), "baz", null).stream().map(IndexTemplateMetadata::name).toList(),
             contains("global")
         );
         assertThat(
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "sneaky1", null)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             contains("sneaky-hidden")
         );
     }
@@ -388,7 +376,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
             MetadataIndexTemplateService.findV1Templates(state.metadata(), "<test-{now/d}>", false)
                 .stream()
                 .map(IndexTemplateMetadata::name)
-                .collect(Collectors.toList()),
+                .toList(),
             containsInAnyOrder("foo-1")
         );
     }
@@ -1143,7 +1131,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                 fail("failed to parse mappings: " + m.string());
                 return null;
             }
-        }).collect(Collectors.toList());
+        }).toList();
 
         // The order of mappings should be:
         // - ct_low
@@ -1199,7 +1187,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                 fail("failed to parse mappings: " + m.string());
                 return null;
             }
-        }).collect(Collectors.toList());
+        }).toList();
         assertThat(parsedMappings.get(0), equalTo(Map.of("_doc", Map.of("properties", Map.of("field2", Map.of("type", "text"))))));
         assertThat(parsedMappings.get(1), equalTo(Map.of("_doc", Map.of("properties", Map.of("field1", Map.of("type", "keyword"))))));
         assertThat(parsedMappings.get(2), equalTo(Map.of("_doc", Map.of("properties", Map.of("field3", Map.of("type", "integer"))))));
@@ -1247,7 +1235,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                     fail("failed to parse mappings: " + m.string());
                     return null;
                 }
-            }).collect(Collectors.toList());
+            }).toList();
 
             assertThat(
                 parsedMappings.get(0),
@@ -1281,7 +1269,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                     fail("failed to parse mappings: " + m.string());
                     return null;
                 }
-            }).collect(Collectors.toList());
+            }).toList();
 
             assertThat(parsedMappings.get(0), equalTo(Map.of("_doc", Map.of("properties", Map.of("field1", Map.of("type", "keyword"))))));
             assertThat(parsedMappings.get(1), equalTo(Map.of("_doc", Map.of("properties", Map.of("field2", Map.of("type", "integer"))))));
@@ -1304,7 +1292,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                     fail("failed to parse mappings: " + m.string());
                     return null;
                 }
-            }).collect(Collectors.toList());
+            }).toList();
 
             assertThat(parsedMappings.get(0), equalTo(Map.of("_doc", Map.of("properties", Map.of("field1", Map.of("type", "keyword"))))));
             assertThat(parsedMappings.get(1), equalTo(Map.of("_doc", Map.of("properties", Map.of("field2", Map.of("type", "integer"))))));
@@ -1355,7 +1343,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                     fail("failed to parse mappings: " + m.string());
                     return null;
                 }
-            }).collect(Collectors.toList());
+            }).toList();
             assertThat(
                 parsedMappings.get(0),
                 equalTo(Map.of("_doc", Map.of("properties", Map.of(DEFAULT_TIMESTAMP_FIELD, Map.of("type", "date")))))
@@ -1404,7 +1392,7 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                     fail("failed to parse mappings: " + m.string());
                     return null;
                 }
-            }).collect(Collectors.toList());
+            }).toList();
             assertThat(
                 parsedMappings.get(0),
                 equalTo(Map.of("_doc", Map.of("properties", Map.of(DEFAULT_TIMESTAMP_FIELD, Map.of("type", "date")))))
@@ -1765,7 +1753,6 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                     .put(
                         DataStreamTestHelper.newInstance(
                             "unreferenced",
-                            new DataStream.TimestampField("@timestamp"),
                             Collections.singletonList(new Index(".ds-unreferenced-000001", "uuid2"))
                         )
                     )
@@ -1803,7 +1790,6 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                     .put(
                         DataStreamTestHelper.newInstance(
                             "logs-mysql-default",
-                            new DataStream.TimestampField("@timestamp"),
                             Collections.singletonList(new Index(".ds-logs-mysql-default-000001", "uuid"))
                         )
                     )
@@ -1927,7 +1913,6 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                     .put(
                         DataStreamTestHelper.newInstance(
                             "unreferenced",
-                            new DataStream.TimestampField("@timestamp"),
                             Collections.singletonList(new Index(".ds-unreferenced-000001", "uuid2"))
                         )
                     )
@@ -1965,7 +1950,6 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
                     .put(
                         DataStreamTestHelper.newInstance(
                             "logs-mysql-default",
-                            new DataStream.TimestampField("@timestamp"),
                             Collections.singletonList(new Index(".ds-logs-mysql-default-000001", "uuid"))
                         )
                     )
@@ -2016,57 +2000,6 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
         MetadataIndexTemplateService.innerRemoveIndexTemplateV2(stateWithTwoTemplates, "logs");
     }
 
-    public void testValidateTsdbDataStreamsReferringTsdbTemplate() throws Exception {
-        ClusterState state = ClusterState.EMPTY_STATE;
-        final MetadataIndexTemplateService service = getMetadataIndexTemplateService();
-        ComposableIndexTemplate template = new ComposableIndexTemplate(
-            Collections.singletonList("logs-*-*"),
-            null,
-            null,
-            100L,
-            null,
-            null,
-            new ComposableIndexTemplate.DataStreamTemplate(false, false, IndexMode.TIME_SERIES),
-            null
-        );
-        state = service.addIndexTemplateV2(state, false, "logs", template);
-
-        Instant now = Instant.now();
-        Metadata.Builder mBuilder = new Metadata.Builder(state.getMetadata());
-        DataStreamTestHelper.getClusterStateWithDataStream(
-            mBuilder,
-            "unreferenced",
-            List.of(Tuple.tuple(now.minus(2, ChronoUnit.HOURS), now))
-        );
-        DataStreamTestHelper.getClusterStateWithDataStream(
-            mBuilder,
-            "logs-mysql-default",
-            List.of(Tuple.tuple(now.minus(2, ChronoUnit.HOURS), now))
-        );
-        ClusterState stateWithDS = ClusterState.builder(state).metadata(mBuilder).build();
-
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> {
-            ComposableIndexTemplate nonDSTemplate = new ComposableIndexTemplate(
-                Collections.singletonList("logs-*-*"),
-                null,
-                null,
-                100L,
-                null,
-                null,
-                new ComposableIndexTemplate.DataStreamTemplate(false, false, randomBoolean() ? null : IndexMode.STANDARD),
-                null
-            );
-            service.addIndexTemplateV2(stateWithDS, false, "logs", nonDSTemplate);
-        });
-
-        assertThat(
-            e.getMessage(),
-            containsString(
-                "would cause tsdb data streams [logs-mysql-default] to no longer match a data stream template with a time_series index_mode"
-            )
-        );
-    }
-
     private static List<Throwable> putTemplate(NamedXContentRegistry xContentRegistry, PutRequest request) {
         ThreadPool testThreadPool = mock(ThreadPool.class);
         ClusterService clusterService = ClusterServiceUtils.createClusterService(testThreadPool);
@@ -2095,9 +2028,9 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
         );
 
         final List<Throwable> throwables = new ArrayList<>();
-        service.putTemplate(request, new MetadataIndexTemplateService.PutListener() {
+        service.putTemplate(request, new ActionListener<>() {
             @Override
-            public void onResponse(MetadataIndexTemplateService.PutResponse response) {
+            public void onResponse(AcknowledgedResponse response) {
 
             }
 
@@ -2114,9 +2047,9 @@ public class MetadataIndexTemplateServiceTests extends ESSingleNodeTestCase {
 
         final List<Throwable> throwables = new ArrayList<>();
         final CountDownLatch latch = new CountDownLatch(1);
-        service.putTemplate(request, new MetadataIndexTemplateService.PutListener() {
+        service.putTemplate(request, new ActionListener<>() {
             @Override
-            public void onResponse(MetadataIndexTemplateService.PutResponse response) {
+            public void onResponse(AcknowledgedResponse response) {
                 latch.countDown();
             }
 
